# kinocms-remastered

./: .editorconfig  .env.example  .gitignore  Makefile  docker-compose.yaml  pyproject.toml
config/celery/: Dockerfile
config/nginx/: default.conf
config/web/: Dockerfile  entrypoint.sh
envs/: .env.local
locale/en/LC_MESSAGES/: django.po
locale/uk/LC_MESSAGES/: django.po
media/template/: 643891a4-3592-4a01-812c-a9e29de8e0fd.html  7e90937b-b067-419b-b638-20722ea95640.html  da36ad65-5fd3-49ce-9e86-22774e66b9a4.html
src/apps/banners/: forms.py  models.py  views.py
src/apps/booking/: views.py
src/apps/cinemas/: apps.py  forms.py  models.py  views.py
src/apps/dashboard/: views.py
src/apps/films/: forms.py  models.py  views.py
src/apps/halls/: apps.py  forms.py  models.py  signals.py  views.py
src/apps/mailing/: consumers.py  forms.py  models.py  routing.py  tasks.py  views.py
src/apps/news/: forms.py  models.py  views.py
src/apps/pages/: forms.py  models.py  views.py
src/apps/promotions/: forms.py  models.py  views.py
src/apps/schedule/: apps.py  models.py  views.py
src/apps/users/: forms.py  models.py  views.py
src/config/: settings.py
src/core/: asgi.py  settings.py  urls.py  views.py
static/custom/css/: common.css  datatable.css  delete-corner-button.css  full-width-button-group.css  grid.css  horizontal-formset.css  preview.css  ratio.css  responsive-dropdown.css  responsive-inputs.css  seat-booking.css  select2.css  (+4 more)
templates/site/: base.html  contacts.html  hall.html  main.html  news.html  page.html  profile.html  schedule.html
(+84 files in other folders)
